[package]
name = "dwarf_x86"
version = "0.1.0"
authors = ["Ammar Askar <ammar@ammaraskar.com>"]
description = "High level API to read debug info for x86 binaries"
repository = "https://github.com/ammaraskar/rust-dwarf-x86"
license = "BSD-3-Clause"

[dependencies]
dwarf = {git = "https://github.com/philipc/rust-dwarf/"}
leb128 = "0.2.1"
enum_primitive = "0.1.1"